[tool.poetry]
name = "semantic-book-reccomender"
version = "0.1.0"
description = "Books Semantic Recommender using Python, OpenAI, LangChain, Gradio"
authors = ["Yuri Osadchyi <aurum.yo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kagglehub = "^0.3.6"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
langchain-community = "^0.3.16"
langchain-openai = "^0.3.2"
langchain-chroma = "^0.2.1"
transformers = "^4.48.1"
gradio = "^5.13.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
